# ftp

./: CMakeLists.txt  Makefile
includes/: ft_p.h  libft.h
libft/: CMakeLists.txt  Makefile  ft_atoi.c  ft_bzero.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_memcmp.c  ft_memcpy.c  ft_putchar_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strncmp.c  ft_strnequ.c  ft_strnew.c  ft_strstr.c  get_next_line.c  libft.h
srcs/: CMakeLists.txt
srcs/client/: create.c  files.c  main.c
srcs/serveur/: create.c  func1.c  func2.c  interpret.c  main.c  tools.c
